--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     </div>
 
     <section id="container">
-      <div class="flow-left" id="image1"><img class="image" src="http://placehold.it/300">A
+      <div class="flow-left">
+        <img id="image1" src="http://placehold.it/300">A
       </div>
-      <div class="flow-left" id="image2"><img src="http://placehold.it/300">B
+      <div class="flow-left">
+        <img id="image2" src="http://placehold.it/300">B
       </div>
-      <div class="flow-left" id="image3"><img src="http://placehold.it/300">C
+      <div class="flow-left">
+        <img id="image3" src="http://placehold.it/300">C
       </div>
 
     </section>
