WIP code review with class, added click tracker, items viewed tracker, work in progress

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     <section id="container">
       <div class="flow-left">
-        <img id="image1" src="http://placehold.it/300">A
+        <img id="image1" src="http://placehold.it/300" alt="">A
       </div>
       <div class="flow-left">
-        <img id="image2" src="http://placehold.it/300">B
+        <img id="image2" src="http://placehold.it/300" alt="">B
       </div>
       <div class="flow-left">
-        <img id="image3" src="http://placehold.it/300">C
+        <img id="image3" src="http://placehold.it/300" alt="">C
       </div>
 
     </section>
