--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 
     <section id="container">
       <div class="flow-left">
-        <img id="image1" src="http://placehold.it/300" alt="">A
+        <img id="image1" src="http://placehold.it/300" alt="">
       </div>
       <div class="flow-left">
-        <img id="image2" src="http://placehold.it/300" alt="">B
+        <img id="image2" src="http://placehold.it/300" alt="">
       </div>
       <div class="flow-left">
-        <img id="image3" src="http://placehold.it/300" alt="">C
+        <img id="image3" src="http://placehold.it/300" alt="">
       </div>
 
     </section>
 
-    <div id="big">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae distinctio fuga quaerat optio consectetur eum nulla quia minima saepe, illum dicta amet quidem labore assumenda magnam tenetur adipisci impedit quae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae distinctio fuga quaerat optio consectetur eum nulla quia minima saepe, illum dicta amet quidem labore assumenda magnam tenetur adipisci impedit quae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae distinctio fuga quaerat optio consectetur eum nulla quia minima saepe, illum dicta amet quidem labore assumenda magnam tenetur adipisci impedit quae.</p>
+    <div id='content' name='content'>
+
     </div>
 
   <footer>footer stuff</footer>
