--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js" charset="utf-8"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <title></title>
@@ -26,9 +27,12 @@
 
     <div id='content' name='content'>
 
+    <canvas id="canvas" width="500" height="300"></canvas>
     </div>
 
-  <footer>footer stuff</footer>
- <script src="js/app.js" type='text/javascript'></script>
+
+  <script src="js/app.js" type='text/javascript'></script>
+  <!-- <script src="js/chart.js" charset="utf-8"></script> -->
+   <footer>footer stuff</footer>
   </body>
 </html>
