--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js" charset="utf-8"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
@@ -8,7 +10,7 @@
   </head>
   <body>
     <div class="navbar">
-      <img src="http://placehold.it/200x70"><h1>BusMall Survey</h1>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bus.svg" width="200px" height="150px"><h1>BusMall Product Survey</h1>
 
     </div>
 
@@ -33,6 +35,8 @@
 
   <script src="js/app.js" type='text/javascript'></script>
   <!-- <script src="js/chart.js" charset="utf-8"></script> -->
-   <footer>footer stuff</footer>
+   <footer>
+    BusMall Inc.
+    </footer>
   </body>
 </html>
